Fix issue on vertical scrollbar
Now the vertical scrollbar is hidden all the time.
The site is still scrollable.

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@
 
     --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
           0.125em 0.125em 0.25em rgba(0,0,0,.15);
+
+    scrollbar-width: none !important;
 }
 
 @media (min-width: 700px){
@@ -39,7 +41,13 @@
 
 html {
     scroll-behavior: smooth;
+    /* overflow: scroll; */
 }
+
+/* ::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+} */
 
 body {
     background: var(--clr-light);
@@ -57,9 +65,9 @@ body::-webkit-scrollbar {
   
 /* Hide scrollbar for IE, Edge and Firefox */
 body {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-  }
+    -ms-overflow-style: none;  
+    /* IE and Edge */
+}
 
 img {
     display: block;
